# mini-os-crytex

./: .gitignore  AGENTS.md  AGENT_SWARM_LORA_SESSION_SPEC.md  BACKEND_FEATURE_AUDIT.md  BACKEND_PROOF_MATRIX.md  CHANGELOG.md  Cargo.toml  PRODUCT_ROADMAP.md  README.md  SMOKE_TEST_REPORT.md  UI_PRODUCT_REQUIREMENTS.md  UI_REQUIREMENTS.md  UI_RESEARCH_AND_SPEC.md
.crytex-smoke-logs/: agent-swarm-lora-routing-proof.json  canonical-backend-acceptance-proof.json  diagnostics-unification-proof.json  lora-real-quality-gate-proof.json  model-runtime-proof.json  orchestrator-quality-gate-proof.json  rag-full-proof.json
completions/: _crytex.ps1  crytex.bash  crytex.fish
crates/crytex-agents/: Cargo.toml
crates/crytex-agents/assets/: architect-system.md  coder-system.md  critic-system.md  qa-system.md  researcher-system.md  security-system.md
crates/crytex-agents/assets/critics/: specialized-critic-system.md
crates/crytex-agents/src/: architect.rs  coder.rs  critic.rs  json.rs  lib.rs  prompts.rs  qa.rs  researcher.rs  security.rs  summarizer.rs  tooling.rs
crates/crytex-agents/src/critics/: code.rs  mod.rs  security.rs  style.rs  test.rs
crates/crytex-bench/: Cargo.toml
crates/crytex-bench/src/: ab_test.rs  error.rs  golden_set.rs  harness.rs  lib.rs  lora_gate.rs  models.rs  prompt_gate.rs  repository.rs  runner.rs  scorer.rs
crates/crytex-compress/: Cargo.toml
crates/crytex-compress/src/: cache_aligner.rs  ccr.rs  compress.rs  content.rs  dedup.rs  embed.rs  lib.rs  llm.rs  message.rs  pipeline.rs  scoring.rs  sizing.rs  token.rs  token_economy.rs  tree_sitter_detector.rs  unidiff_detector.rs
crates/crytex-compress/src/compressors/: bm25.rs  budget.rs  code.rs  diff.rs  hybrid.rs  json.rs  log.rs  mod.rs  search.rs  smart.rs  smart_crusher.rs  summarize.rs  text.rs  truncate.rs
crates/crytex-compress/src/tokenizer/: estimator.rs  hf_impl.rs  mod.rs  registry.rs  tiktoken_impl.rs
crates/crytex-core/: Cargo.toml
crates/crytex-core/src/: app_context.rs  bus.rs  capabilities.rs  config.rs  indexer.rs  lib.rs  metrics.rs  models.rs  persistence.rs  policy.rs  rag_pipeline.rs  security.rs  state_export.rs  tracing.rs
crates/crytex-core/src/services/: agent_service.rs  alert_service.rs  artifact_contract.rs  audit_log_service.rs  audited_tool_service.rs  autonomous_evolution_policy.rs  bulk_audit_log.rs  caching.rs  context_assembler.rs  critic_council.rs  embedder.rs  event_service.rs  hardware.rs  inference_service.rs  kanban_projection.rs  lora_evolution.rs  lora_router.rs  lora_trainer.rs  memory_bank.rs  mod.rs  model_compatibility.rs  model_manager.rs  model_runtime_probe.rs  orchestrator.rs  project_service.rs  project_watcher.rs  prompt_evolution.rs  rate_limit.rs  recovery.rs  release_gate.rs  reranker.rs  reward_service.rs  role.rs  role_quality.rs  runtime_model_matrix.rs  sandbox_service.rs  scheduler.rs  task_service.rs  tool_service.rs  vector_store.rs  (+2 more)
crates/crytex-core/src/services/hybrid/: dbsf.rs  mod.rs  retriever.rs  rrf.rs
crates/crytex-core/tests/: codegen_pipeline.rs  feedback_loop.rs  prompt_evolution_integration.rs
crates/crytex-diag/: Cargo.toml
crates/crytex-diag/src/: lib.rs  main.rs
crates/crytex-doc/: Cargo.toml
crates/crytex-doc/src/: chunking.rs  impact.rs  lib.rs
crates/crytex-doc/src/graph/: builder.rs  common.rs  mod.rs
crates/crytex-doc/src/graph/languages/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/crytex-ide/: Cargo.toml
crates/crytex-ide/src/: bridge.rs  ide_service.rs  lib.rs  protocol.rs
crates/crytex-ide/src/lsp/: client.rs  mod.rs  server.rs  transport.rs
crates/crytex-inference-candle/: Cargo.toml
crates/crytex-inference-candle/src/: lib.rs  model.rs  tokenizer.rs
crates/crytex-inference-mistral/: Cargo.toml
crates/crytex-inference-mistral/src/: lib.rs  training.rs
crates/crytex-inference-ollama/: Cargo.toml
crates/crytex-inference-ollama/src/: lib.rs
crates/crytex-inference-ollama/tests/: e2e_ollama.rs
crates/crytex-inference-onnx/: Cargo.toml
crates/crytex-inference-onnx/src/: lib.rs  reranker.rs
crates/crytex-inference-openai/: Cargo.toml
crates/crytex-inference-openai/src/: lib.rs
crates/crytex-kernel/: Cargo.toml
crates/crytex-kernel/src/: cli_contract.rs  crytex_cli.rs  crytex_cli_commands.rs  crytex_proof.rs  factory.rs  main.rs
crates/crytex-loader/: Cargo.toml
crates/crytex-loader/src/: main.rs
crates/crytex-sandbox/: Cargo.toml  README.md  build-images.sh
crates/crytex-sandbox/images/node/: Dockerfile
crates/crytex-sandbox/images/python/: Dockerfile
crates/crytex-sandbox/images/rust/: Dockerfile
crates/crytex-sandbox/src/: lib.rs  orchestrator.rs  wasmtime.rs
crates/crytex-sandbox/src/backends/: docker.rs  host.rs  mod.rs  wasi.rs
crates/crytex-storage/: Cargo.toml
crates/crytex-storage/src/: files.rs  graph.rs  lib.rs  persistence.rs  sparse_embedder.rs  vector.rs
crates/crytex-storage/src/vector/: edge.rs  memory.rs  qdrant.rs
crates/crytex-tauri/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
crates/crytex-tauri/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  app_state.rs  commands.rs  ipc.rs  lib.rs  main.rs  styles.css  ui-types.ts
crates/crytex-tauri/tests/: e2e_ollama_start_run.rs
crates/crytex-tools/: Cargo.toml
crates/crytex-tools/src/: fs.rs  git.rs  lib.rs  parser.rs  policy.rs  process.rs  registry.rs  sandbox.rs  schema.rs  search.rs  service.rs
docs/: ARCHITECTURE_BACKEND.md  BACKEND_ACCEPTANCE.md  CLI.md  EVOLUTION_POLICY.md  INSTALL.md  KANBAN.md  LORA_DATASET.md  LORA_EVOLUTION.md  LORA_QUALITY_GATE.md  LORA_TRAINING_OBJECTIVES.md  MODULARITY.md  MODULES_AND_SOLID.md  PROMPT_EVOLUTION.md  RAG.md  RELEASE.md  RELEASE_NOTES.md  ROLE_QUALITY.md  RUNTIME_MODEL_MATRIX.md  SANDBOX_SECURITY.md  STORAGE_RECOVERY.md  TOKEN_ECONOMY.md
examples/: analyst.md  critic.md  orchestrator.md  python-coder.md  qa.md
release/: performance-budgets.json
reports/: documentation-p15-proof.json  evolution-policy-p11-proof.json  lora-dataset-p8-proof.json  (+8 more)
(+31 files in other folders)
