[package]
name = "crytex-agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
crytex-inference = { path = "../crytex-inference" }
crytex-tools = { path = "../crytex-tools" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
