[package]
name = "crytex-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
crytex-sandbox = { path = "../crytex-sandbox" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ulid = "1.1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.29"
futures = "0.3"
rand = "0.8"
tempfile = "3"
crytex-inference = { path = "../crytex-inference" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
