[package]
name = "crytex-diag"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crytex-inference = { path = "../crytex-inference" }
crytex-inference-anthropic = { path = "../crytex-inference-anthropic" }
crytex-inference-ollama = { path = "../crytex-inference-ollama" }
crytex-inference-openai = { path = "../crytex-inference-openai" }
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"

[[bin]]
name = "crytex-diag"
path = "src/main.rs"
