[package]
name = "crytex-doc"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
ignore = "0.4"
petgraph = "0.7"
pulldown-cmark = "0.12"
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pdf-extract = "0.8"
calamine = "0.26"
csv = "1.3"
quick-xml = "0.37"
regex = "1"
serde_yaml = "0.9"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
walkdir = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
