[package]
name = "crytex-ide"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.97"
url = "2"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
