[package]
name = "crytex-inference-candle"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
flash-attn = ["candle-flash-attn", "cuda"]

[dependencies]
crytex-core = { path = "../crytex-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
safetensors = "0.4"
tokenizers = "0.19"
candle-flash-attn = { version = "0.11", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
