[package]
name = "crytex-inference-ollama"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-inference = { path = "../crytex-inference" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
