[package]
name = "crytex-inference-openai"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-inference = { path = "../crytex-inference" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
