[package]
name = "crytex-kernel"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[features]
default = ["mistral"]
mistral = ["dep:crytex-inference-mistral"]
cuda = ["mistral", "crytex-inference-mistral/cuda"]

[dependencies]
crytex-core = { path = "../crytex-core" }
crytex-storage = { path = "../crytex-storage" }
crytex-inference = { path = "../crytex-inference" }
crytex-inference-ollama = { path = "../crytex-inference-ollama" }
crytex-inference-openai = { path = "../crytex-inference-openai" }
crytex-inference-anthropic = { path = "../crytex-inference-anthropic" }
crytex-inference-mistral = { path = "../crytex-inference-mistral", optional = true }
crytex-inference-onnx = { path = "../crytex-inference-onnx" }
crytex-inference-candle = { path = "../crytex-inference-candle" }
crytex-agents = { path = "../crytex-agents" }
crytex-bench = { path = "../crytex-bench" }
crytex-compress = { path = "../crytex-compress" }
crytex-sandbox = { path = "../crytex-sandbox" }
crytex-tools = { path = "../crytex-tools" }
crytex-doc = { path = "../crytex-doc" }
crytex-ide = { path = "../crytex-ide" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
async-trait = "0.1"
ulid = "1.1"
rand = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[[bin]]
name = "crytex-kernel"
path = "src/main.rs"
