[package]
name = "crytex-sandbox"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
anyhow = "1.0"
async-trait = "0.1"
bollard = "0.18"
futures-util = "0.3"
ulid = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
wasmtime = "29"
wasmtime-wasi = "29"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
