[package]
name = "crytex-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
qdrant-client = "1.18"
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
ulid = "1.1"
qdrant-edge = "0.7.2"
uuid = { version = "1.23.4", features = ["v5"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
