[package]
name = "crytex-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
crytex-core = { path = "../crytex-core" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
