[package]
name = "crytex-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
build = "build.rs"

[dependencies]
crytex-core = { path = "../crytex-core" }
crytex-agents = { path = "../crytex-agents" }
crytex-inference = { path = "../crytex-inference" }
crytex-inference-mistral = { path = "../crytex-inference-mistral" }
crytex-inference-ollama = { path = "../crytex-inference-ollama" }
crytex-storage = { path = "../crytex-storage" }
crytex-tools = { path = "../crytex-tools" }
crytex-sandbox = { path = "../crytex-sandbox" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
crytex-bench = { path = "../crytex-bench" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
